--- a/0x02-CSS_advanced/styles/17-style.css
+++ b/0x02-CSS_advanced/styles/17-style.css
@@ -440,8 +440,11 @@ section {
 }
 
 .section-header {
-    text-align: var(--section-header-align);
     padding: var(--section-header-padding);
+}
+
+.section-header {
+    text-align: var(--section-header-align);
 }
 
 .section-body {
